--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>10 - Debug UI</title><script defer="defer" src="bundle.7c3d349bc249559e0f2f.js"></script><link href="main.css" rel="stylesheet"></head><body><canvas class="webgl"></canvas></body></html>
+<!doctype html><html lang="en">
+  <head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,interest-cohort=()" http-equiv="Permissions-Policy">
+    <title>10 - Debug UI</title><script defer="defer" src="bundle.7c3d349bc249559e0f2f.js"></script><link href="main.css" rel="stylesheet"></head><body><canvas class="webgl"></canvas></body></html>
